# silver-magpie-backend

./: .ghc.environment.x86_64-darwin-8.6.5  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO.md  env.yaml  shell.nix  silver-magpie-backend.cabal  silver-magpie-haskell.cabal  stack.yaml
_logs/: logs.md
server/: Api.hs  App.hs  Authenticate.hs  Env.hs  Main.hs  SafeHttp.hs  Server.hs  Twitter.hs  Types.hs
server-tests/: Test.hs
server/Control/Monad/: Database.hs
server/Control/Monad/Database/: MongoDB.hs  SQLite.hs
server/Data/: AppAuth.hs  UserDetails.hs
server/MongoTypes/: AppAuth.hs  UserDetails.hs
server/Routes/: AppGetAccess.hs  AppRevokeAccess.hs  Favorite.hs  Home.hs  Mentions.hs  Retweet.hs  SaveCredentials.hs  SignIn.hs  StatusUpdate.hs  UserSearch.hs
server/Twitter/: Query.hs  Timeline.hs  Users.hs
server/Types/: AppAuth.hs  UserDetails.hs
