name: silver-magpie-haskell
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/silver-magpie-haskell#readme
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/silver-magpie-haskell

executable silver-magpie
    main-is: Main.hs
    build-depends:
        base -any,
        bson -any,
        aeson -any,
        servant -any,
        servant-server -any,
        wai -any,
        warp -any,
        text -any,
        mongoDB -any,
        either -any,
        yaml -any,
        authenticate-oauth -any,
        http-client-tls -any,
        wai-cors -any,
        http-client -any,
        http-types -any,
        bytestring -any,
        containers -any,
        uri-encode -any
    default-language: Haskell2010
    hs-source-dirs: server
    other-modules:
        Main
        Types
        Api
        App
        Env
        Authenticate
        SafeHttp
        Twitter
        Routes.AppGetAccess
        Routes.Favorite
        Routes.AppRevokeAccess
        Routes.SignIn
        Routes.SaveCredentials
        Routes.Home
        Routes.Mentions
        Routes.StatusUpdate
        Routes.UserSearch
        MongoTypes.AppAuth
        MongoTypes.UserDetails
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite silver-magpie-haskell-test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        base -any,
        silver-magpie -any
    default-language: Haskell2010
    hs-source-dirs: server-tests
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
